--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,10 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ #root {
+  background-image: url('https://wallpaperaccess.com/full/1157476.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
