--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,8 +16,16 @@ code {
 @tailwind utilities;
 
  #root {
-  background-image: url('https://wallpaperaccess.com/full/1157476.jpg');
+  background-image: url('https://static.vecteezy.com/system/resources/previews/004/771/733/original/abstract-blue-and-white-colour-background-with-geometric-shape-illustration-free-vector.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
